# LHAI

./: .gitattributes  .gitignore  404.html  Makefile  README.md  README.txt  README_en.md  README_zh.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
Content/codes/: index.html
Content/data/: daia_imshow.ipynb  index.html
Content/eval/: Eval_PSNR_SSIM_CNN_EXP01.txt  index.html
Content/model/: index.html
Content/network/: index.html
Content/others/: index.html
Content/structure/: index.html
LHAI/: __init__.py  config.py  evaluation.py  features.py  plots.py
LHAI/function/: Dataset.py  Loss.py
LHAI/modeling/: predict.py  train.py
LHAI/models/: CARN_EXP_0_1.py  DRCN_EXP_0_1.py  DRRN_EXP_0_1.py  EDSR_EXP_0_1.py  GAN_EXP_0_1.py  LAPSRN_EXP_0_1.py  SRDenseNet_EXP_0_1.py  SRGAN_EXP_0_1.py  UNET_EXP_0_1.py  VAE_EXP_3_1.py  VDSR_EXP_0_1.py  modules.py
SimulateExtendedSRC/: Demo.ipynb
SimulateExtendedSRC/.ipynb_checkpoints/: Demo-checkpoint.ipynb  examinejpt-checkpoint.ipynb  response-checkpoint.py  srcgen-checkpoint.py  worker-checkpoint.ipynb  worker-checkpoint.py
SimulateExtendedSRC/disc_halo_test/: disc_halo_test.fits  disc_halo_test.hd5  (+11 more)
blog/: index.html
changelog/: index.html
css/: mydef.html
data/: datacheck.ipynb
docs/: 1.txt  README.md  README_en.md  README_zh.md  mkdocs.yml
res_file/: map_20240731_WCDA.root  res_20240731_WCDA.root
resources/: POS_64.PPTX  final_poster.pptx
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
stylesheets/: custom.css  extra.css
zh/: index.html
(+348 files in other folders)
